[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "rsa"]
description = "Cryptographic Accumulator common structs and methods"
edition = "2018"
license = "Apache-2.0"
name = "accumulator-common"
repository = "https://github.com/mikelodder7/accumulator-rs"
version = "0.1.0"

[features]
default = ["bi-openssl"]
bi-rust = ["glass_pumpkin", "num-bigint", "num-traits", "num-integer"]
bi-openssl = ["openssl"]
bi-gmp = ["rust-gmp"]

[dependencies]
failure = "0.1"
glass_pumpkin = { version = "0.4", optional = true }
num-bigint = { version = "0.3", features = ["rand"], optional = true }
num-traits = { version = "0.2", optional = true }
num-integer = { version = "0.1", optional = true }
openssl = { version = "0.10", optional = true }
rust-gmp = { version = "0.5", optional = true }
serde = { version = "1.0", features = ["serde_derive"] }
zeroize = { version = "1.1", features = ["zeroize_derive"] }

[dev-dependencies]
rust-gmp = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
