[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "rsa"]
description = "A Universal Cryptographic RSA Accumulator"
documentation = "https://docs.rs/accumulator-rs"
edition = "2018"
license = "Apache-2.0"
name = "rsa"
readme = "README.md"
repository = "https://github.com/mikelodder7/accumulator-rs"
version = "0.1.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
arrayref = "0.3"
blake2 = "0.8"
hex = "0.4"
rand = "0.7"
rayon = "1.3"
openssl = "0.10"
serde = { version = "1.0", features = ["serde_derive"] }
zeroize = { version = "1.1", features = ["zeroize_derive"] }

[dev-dependencies]
rust-gmp = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]