[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "rsa"]
description = "A Universal Cryptographic RSA Accumulator"
documentation = "https://docs.rs/accumulator-rs"
edition = "2018"
license = "Apache-2.0"
name = "rsa"
readme = "README.md"
repository = "https://github.com/mikelodder7/accumulator-rs"
version = "0.1.0"

[badges]
maintenance = { status = "experimental" }

[features]
default = ["bigint-openssl"]
bigint-rust = ["glass_pumpkin", "num-bigint", "num-traits", "num-integer"]
bigint-openssl = ["openssl"]

[dependencies]
arrayref = "0.3"
blake2 = "0.8"
failure = "0.1"
glass_pumpkin = { version = "0.4", optional = true }
hex = "0.4"
num-bigint = { version = "0.3", features = ["rand"], optional = true }
num-traits = { version = "0.2", optional = true }
num-integer = { version = "0.1", optional = true }
openssl = { version = "0.10", optional = true }
rand = "0.7"
rayon = "1.3"
rust-gmp = { version = "0.5", optional = true }
serde = { version = "1.0", features = ["serde_derive"] }
zeroize = { version = "1.1", features = ["zeroize_derive"] }

[dev-dependencies]
rust-gmp = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]